{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 516,
  "lineage": "9acdeeea-47de-291f-3a3d-8e8b29147c5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0659642169bf1b4b2",
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:instance/i-09f8f927bfde1e088",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f8f927bfde1e088",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa204b83a9a18605",
            "private_dns": "ip-10-0-0-143.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-47-129-99-40.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.99.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f44eaaf34eaf36b6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c8da4afe8f952fa",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0861841c3701ec7b6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:security-group/sg-0861841c3701ec7b6",
            "description": "Allow inbound traffic for Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0861841c3701ec7b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "582719176716",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.msk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:security-group/sg-0f2943a3fc9e6b411",
            "description": "Allow inbound traffic to MSK",
            "egress": [],
            "id": "sg-0f2943a3fc9e6b411",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "msk-sg",
            "name_prefix": "",
            "owner_id": "582719176716",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:security-group/sg-09688c6cc2a3b2d15",
            "description": "Allow inbound traffic to RDS",
            "egress": [],
            "id": "sg-09688c6cc2a3b2d15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "582719176716",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01b04e248409152",
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:elastic-ip/eipalloc-0b01b04e248409152",
            "association_id": "eipassoc-0e69e2d7a5f5c89a5",
            "domain": "vpc",
            "id": "eipalloc-0b01b04e248409152",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-070e4f0b86be51147",
            "private_dns": "ip-10-0-0-215.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.215",
            "public_dns": "ec2-54-179-141-78.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.141.78",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:internet-gateway/igw-06eab6a6cdb1f2d56",
            "id": "igw-06eab6a6cdb1f2d56",
            "owner_id": "582719176716",
            "tags": {
              "Name": "ecommerce-eks-igw"
            },
            "tags_all": {
              "Name": "ecommerce-eks-igw"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b01b04e248409152",
            "association_id": "eipassoc-0e69e2d7a5f5c89a5",
            "connectivity_type": "public",
            "id": "nat-0b4da7f58a065fd9b",
            "network_interface_id": "eni-070e4f0b86be51147",
            "private_ip": "10.0.0.215",
            "public_ip": "54.179.141.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c8da4afe8f952fa",
            "tags": {
              "Name": "ecommerce-eks-nat"
            },
            "tags_all": {
              "Name": "ecommerce-eks-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:route-table/rtb-063bf1ecb81baf0a7",
            "id": "rtb-063bf1ecb81baf0a7",
            "owner_id": "582719176716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4da7f58a065fd9b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-eks-private"
            },
            "tags_all": {
              "Name": "ecommerce-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:route-table/rtb-0e4b18b08c1f36e56",
            "id": "rtb-0e4b18b08c1f36e56",
            "owner_id": "582719176716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06eab6a6cdb1f2d56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-eks-public"
            },
            "tags_all": {
              "Name": "ecommerce-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fafad02de9910186",
            "route_table_id": "rtb-063bf1ecb81baf0a7",
            "subnet_id": "subnet-005b5c6dd6b89e217"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a24d9db4a00e9a37",
            "route_table_id": "rtb-063bf1ecb81baf0a7",
            "subnet_id": "subnet-0d3425f4754b281e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06be33dbdb4a6ae63",
            "route_table_id": "rtb-063bf1ecb81baf0a7",
            "subnet_id": "subnet-03f9518b5bc13103a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022214c6078f9a316",
            "route_table_id": "rtb-0e4b18b08c1f36e56",
            "subnet_id": "subnet-04c8da4afe8f952fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da403a61b4f5a0b",
            "route_table_id": "rtb-0e4b18b08c1f36e56",
            "subnet_id": "subnet-0ee119edd21e816d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef224a2357315d29",
            "route_table_id": "rtb-0e4b18b08c1f36e56",
            "subnet_id": "subnet-0847817df25994099"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-005b5c6dd6b89e217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b5c6dd6b89e217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-private-0",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-private-0",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-0d3425f4754b281e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3425f4754b281e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-private-1",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-private-1",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-03f9518b5bc13103a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f9518b5bc13103a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-private-2",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-private-2",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-04c8da4afe8f952fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c8da4afe8f952fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-public-0",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-public-0",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-0ee119edd21e816d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee119edd21e816d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-public-1",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-public-1",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:subnet/subnet-0847817df25994099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847817df25994099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582719176716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-eks-public-2",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ecommerce-eks-public-2",
              "kubernetes.io/cluster/ecommerce-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-001b93b8e6b6616df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:582719176716:vpc/vpc-001b93b8e6b6616df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0197c95779035120f",
            "default_route_table_id": "rtb-0f1811fdfdb24ecfa",
            "default_security_group_id": "sg-01e149172944ee0df",
            "dhcp_options_id": "dopt-008c37e5fd5895174",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001b93b8e6b6616df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1811fdfdb24ecfa",
            "owner_id": "582719176716",
            "tags": {
              "Name": "ecommerce-eks-vpc",
              "kubernetes.io/cluster/ecommerce-eks": "shared"
            },
            "tags_all": {
              "Name": "ecommerce-eks-vpc",
              "kubernetes.io/cluster/ecommerce-eks": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}